# gb_cxx_difficult_moments

./: CMakeLists.txt  README.md
lesson1/: CMakeLists.txt  main.cxx
lesson2/: CMakeLists.txt  README.md  main.cxx
lesson3/: CMakeLists.txt  README.md  main.cxx
lesson4/: CMakeLists.txt  main.cxx
lesson5/: CMakeLists.txt  README.md  main.cxx
lesson6/: CMakeLists.txt  main.cxx
lesson7/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  main.cxx  studentLib.pb.cc  studentLib.pb.h  studentLib.proto
lesson8/: CMakeLists.txt
lesson8/data/: PhoneBook.txt
lesson8/src/: lesson1.hxx  main.cxx
lesson8/test/: test_lesson1.cxx
